add requirements.txt and start adding text to README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material
-      - run: pip install mkdocs-jupyter
+      - run: pip install --upgrade -r requirements.txt
       - run: mkdocs gh-deploy --force
