--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: ScienceIT at Lawrence Berkeley National Laboratory
+site_name: Science IT Documentation
 
 nav:
   - Home: index.md
@@ -16,18 +16,22 @@ nav:
           - Software Module Farm: hpc/software/software-module-farm.md
           - Module Management: hpc/software/module-management.md
       - Frequently Asked Questions: hpc/faqs.md
-  - Data Management and Storage:
+      - Tutorials:
+          - Using GPU on Jupyter: tutorials/jupyter_gpu.ipynb
+      - Training and Workshops: training.md
+  - Data Transfer & Storage:
       - Data Transfer: data/datatransfer_node.md
       - Globus: data/globus.md
       - Research Data Management: data/researchdata.md
       - Scientific Project Storage Service: data/spss.md
-  - Cloud Computing:
+  - Hosting:
+      - Scientific Virtual Machines: index.md
+      - Data Center Co-Location: index.md
+      - Kubernetes Cluster: index.md
+  - Cloud Service Providers:
       - Cloud Overview: cloud/index.md
       - Google Cloud Platform: cloud/gcp.md
       - Amazon Web Services: cloud/aws.md
-  - Tutorials:
-      - Using GPU on Jupyter: tutorials/jupyter_gpu.ipynb
-  - Training and Workshops: training.md
 
 plugins:
   - search
@@ -35,8 +39,9 @@ plugins:
 
 theme:
   name: material
+  custom_dir: docs/overrides
   palette:
-    primary: black
+    primary: custom
   logo: assets/scienceitlogo.png
   features:
     - content.code.annotate
