--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
       - Scientific Virtual Machines: construction.md
       - Data Center Co-Location: construction.md
       - Supported Research Clusters: construction.md
+      - Secure Computing: construction.md
   - Data Transfer & Storage:
       - Data Transfer: data/datatransfer_node.md
       - Globus at Berkeley Lab: data/globus.md
