--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
       - Data Center Co-Location: construction.md
       - Supported Research Clusters: construction.md
       - Secure Computing: construction.md
+      - Live Cluster Status: hpc/status.md 
   - Data Transfer & Storage:
       - Data Transfer: data/datatransfer_node.md
       - Globus at Berkeley Lab: data/globus.md
@@ -32,10 +33,15 @@ nav:
       - Cloud Overview: cloud/index.md
       - Google Cloud Platform: cloud/gcp.md
       - Amazon Web Services: cloud/aws.md
+  - Help: help.md      
 
 plugins:
   - search
   - mkdocs-jupyter
+  - macros
+
+extra:
+  ext: <svg viewBox="0 0 1024 768" preserveAspectRatio="xMidYMid meet" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M640 768H128V257.90599999999995L256 256V128H0v768h768V576H640V768zM384 128l128 128L320 448l128 128 192-192 128 128V128H384z"/></svg>
 
 theme:
   name: material
@@ -61,7 +67,9 @@ markdown_extensions:
   - pymdownx.arithmatex
   - pymdownx.superfences
   - pymdownx.details
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      base_path: "/Users/AWSchmeder/projects/scienceit-docs/docs/"
+      check_paths: true
   - pymdownx.tabbed:
       alternate_style: true
 
