--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
   - Data Transfer & Storage:
       - Data Transfer: data/datatransfer_node.md
       - Globus at Berkeley Lab: data/globus.md
-      - Research Data Management: data/researchdata.md
+      - Globus Instructions: data/globus_instructions.md
       - Scientific Project Storage Service: data/spss.md
   - Cloud Computing:
       - Cloud Overview: cloud/index.md
