--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,8 +24,8 @@ nav:
       - Data Transfer:
           - Using the lrc-xfer DTN: hpc/datatransfer_node.md
           - Using Globus: hpc/globus_instructions.md
-          - Rclone on Lawrencium: hpc/globus_instructions.md
-          - SPSS on Lawrencium: hpc/globus_instructions.md
+          - Rclone on Lawrencium: construction.md
+          - SPSS on Lawrencium: construction.md
       - Software:
           - Software Module Farm: hpc/software/software-module-farm.md
           - Module Management: hpc/software/module-management.md
